# im-server

./: .env  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2021-09-10-012457_users/: down.sql  up.sql
migrations/2021-09-10-021546_rooms/: down.sql  up.sql
migrations/2021-09-10-022319_friends/: down.sql  up.sql
migrations/2021-09-10-022330_room_members/: down.sql  up.sql
migrations/2021-09-16-100029_message/: up.sql
migrations/2021-09-17-083731_message/: up.sql
migrations/2021-09-26-081356_users/: up.sql
migrations/2021-09-26-093807_message/: down.sql  up.sql
src/: lib.rs  linux_daemon.rs  main.rs  schema.rs  server.rs  test.rs  windows_service.rs
src/chat_server/: mod.rs
src/chat_session/: mod.rs
src/db/: friend_operator.rs  message_operation.rs  mod.rs  room_members_operator.rs  room_operator.rs  user_operator.rs
src/message/: message_date_format.rs  mod.rs
src/models/: friend_model.rs  message_model.rs  mod.rs  room_member_model.rs  rooms_model.rs  user_model.rs
src/routers/: chat_server.rs  mod.rs  static_file.rs  upload.rs
src/routers/user/: friend.rs  login.rs  mod.rs  register.rs  room.rs
src/test/: message_test.rs  mod.rs
src/util/: check_token_expired.rs  get_token.rs  mod.rs  token.rs
static/: b
