[package]
name = "im-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "2.2.0"
actix-broker = "0.3.1"
actix-files = "0.4"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rand = "0.7"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["postgres"] }
serde_json="1.0"
serde="1.0"
chrono = "0.4.19"