[package]
name = "im-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "2.2.0"
actix-broker = "0.3.1"
actix-files = "0.4"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rand = "0.7"
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["postgres","r2d2"] }
serde_json="1.0"
serde="1.0"
chrono = "0.4.19"
r2d2 = "0.8.9"
r2d2_redis = "0.14.0"
jsonwebtoken = "7"
redis = { version = "0.19.0", features = ["tokio-native-tls-comp", "cluster"] }
actix-session = "0.4"
actix-redis = "0.9"
actix-service = "1"
actix-http = "2"
tokio = { version = "1.11.0", features = ["full"] }
# daemonize = "0.4.1"
windows-service = "0.4.0"